fixed menu icon spacing and color

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -218,8 +218,8 @@ h1, h2, h3, h4, h5, h6 {
 /* Mobile Navigation */
 .mobile-nav-toggle {
   position: fixed;
-  right: 15px;
-  top: 15px;
+  right: 20px;
+  top: 20px;
   z-index: 9998;
   border: 0;
   background: none;
@@ -244,7 +244,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .mobile-nav-active .mobile-nav-toggle i {
-  color: #fff;
+  color: #149ddd;
 }
 
 /*--------------------------------------------------------------
